# gRPC-lab

./: .proto  CMakeLists.txt  README.md  client.cpp  client.py  dictionary.pb.cc  dictionary.pb.h  dictionary.proto  server.cpp  web.cpp  web.py
include/: ServicoDicionario.h
proto/: dicionario.grpc.pb.cc  dicionario.grpc.pb.h  dicionario.pb.cc  dicionario.pb.h  dicionario.proto
src/: Client.cpp  Server.cpp  ServicoDicionario.cpp
